tests-integration/fixtures/checking/1772866080_derive_newtype_class_not_constructor/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms

Types

Derived
derive forall (t0 :: Type). Newtype @Type (Int -> Int) (t0 :: Type)

Diagnostics
error[CannotDeriveForType]: Cannot derive for type: Int -> Int
  --> 5:1..5:39
  |
5 | derive instance Newtype (Int -> Int) _
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
